--- a/src/style-debug.css
+++ b/src/style-debug.css
@@ -1,3 +1,19 @@
+/* TO index.css */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* TO app.css */
 /* App */
 
 .app-container {
@@ -8,7 +24,6 @@
   display: flex;
   flex-flow: row nowrap;
 }
-
 
 /* Nav Bar */
 
@@ -219,4 +234,6 @@ a:hover {
   .right-container {
     flex: 2 0 200px;
   }
+  
+  
 }
