--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   min-width: 150px;
   box-shadow: -1px 1px 12px 0px rgb(0 0 0 / 35%);
   z-index: 100;
+  background: #ededed;
 }
 
 .nav-inner {
@@ -37,7 +38,7 @@
 .logo-container {
   flex: 2 2 150px;
   justify-content: center;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .title-container {
@@ -54,6 +55,11 @@
 
 .logo {
   display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
 }
 
 .logo img {
@@ -112,27 +118,122 @@
 }
 
 .text-box {
-  padding: 10px;
+  padding: 15px;
   background: #fff;
 }
 
+.about-pic {
+  display: flex;
+}
 
+.about-pic img {
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  max-height: fit-content;
+}
+
+.icon-box {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 15px;
+  justify-content: space-around;
+  aspect-ratio: 1 / 1;
+}
+.service-icon {
+  padding: 5px;
+  background: #222;
+  width: 60px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.service-icon:hover {
+  background: #111;
+  box-shadow: -1px 1px 12px 0px rgb(0 0 0 / 35%);
+
+}
+
+.project-box {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 10px;
+  justify-content: space-around;
+  /* aspect-ratio: 1 / 1; */
+}
+.project-image {
+  flex: 1 1 auto;
+  
+  display: flex;
+}
+
+.project-image.wide {
+  aspect-ratio: 3 / 2;
+}
+.project-image.tall {
+  aspect-ratio: 2 / 3;
+}
+.project-image img {
+  max-height: 135px;
+  max-width: 135px;
+  flex: 1 1 auto;
+}
 /* Text Format */
 
-ul, li, h1, h2, h3, h4, a {
+ul, li, h1, h2, h3, h4, a, p {
   padding: 0;
   margin: 0;
 }
 
+p, h2, h4, li {
+  font-family: "Dosis", sans-serif;
+  font-style: normal;
+  font-optical-sizing: auto;
+}
+
+h1, h3 {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-optical-sizing: auto;
+}
+
+h1.ital, h3.ital {
+  font-style: italic;
+}
+
 p {
-  margin: 0;
-  padding: 0 0 10px;
+  font-size: 18px;
+  padding-bottom: 10px;
+  font-weight: 400;
+  color: #222;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 65px;
+  padding-bottom: 5px
+}
+
+h2 {
+  padding-bottom: 15px;
+  font-weight: 600;
+}
+
+h3 {
+  padding-bottom: 5px;
+  font-weight: 600;
+}
+
+h4 {
+  padding-bottom: 5px;
+  font-weight: 500;
 }
 
 .home-container h1 {
-  font-size: 80px;
-  line-height: 65px;
-  margin: 5px 0;
   color: #fff;
 }
 
@@ -154,6 +255,13 @@ a:hover {
   text-decoration: underline;
 }
 
+p:last-child, li:last-child {
+  padding: 0;
+}
+
+span.small {
+  font-size: 75%;
+}
 
 /* Mobile */
 
@@ -207,10 +315,14 @@ a:hover {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    flex: 0 1 250px;
+    flex: 0 1 275px;
     gap: 20px;
   }
 
+  .page-container:has(.home-container) {
+    background-position: 30% 20%;
+  }
+  
   .left-container {
     flex: 1 0 150px;
     align-items: flex-start;
@@ -218,5 +330,9 @@ a:hover {
 
   .right-container {
     flex: 2 0 200px;
+  }
+  h1 {
+    font-size: 70px;
+    line-height: 55px;
   }
 }
