--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* App.css || Natalie Rekai || #301484514 || 26-Sep-24 */
+
 /* App */
 
 .app-container {
@@ -122,11 +124,12 @@
   background: #fff;
 }
 
-.about-pic {
+.about-pic, .contact-pic {
   display: flex;
+  align-items: center;
 }
 
-.about-pic img {
+.about-pic img, .contact-pic img {
   padding: 0;
   height: 100%;
   width: 100%;
@@ -154,7 +157,6 @@
 .service-icon:hover {
   background: #111;
   box-shadow: -1px 1px 12px 0px rgb(0 0 0 / 35%);
-
 }
 
 .project-box {
@@ -162,10 +164,8 @@
   flex-flow: row wrap;
   gap: 10px;
   justify-content: space-around;
-  /* aspect-ratio: 1 / 1; */
 }
 .project-image {
-  /* flex: 1 1 auto; */
   aspect-ratio: 4 / 3;
   display: flex;
   background-size: cover;
@@ -176,12 +176,10 @@
 }
 
 .project-image.wide {
-  /* aspect-ratio: 3 / 2; */
   width: 135px;
   flex: 0 1 48%;
 }
 .project-image.tall {
-  /* aspect-ratio: 2 / 3; */
   max-height: 135px;
   width: 100%;
   flex: 0 1 32%;
@@ -191,6 +189,30 @@
   max-width: 135px;
   flex: 1 1 auto;
 }
+
+
+/* Other */
+
+.button {
+  background: #222;
+  padding: 10px;
+  margin: 20px 0 0;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+}
+
+.button:hover {
+  background: #111;
+  box-shadow: -1px 1px 12px 0px rgb(0 0 0 / 35%);
+}
+
+input {
+  padding: 10px;
+}
+
+
+/* Lightbox */
 
 .lightbox-container {
   width: 100%;
@@ -212,23 +234,21 @@
   margin: auto;
 }
 
+.lightbox-display.contact {
+  display: flex;
+  padding: 30px;
+  background: #fff;
+  height: fit-content;
+  margin: auto;
+  flex-flow: column nowrap;
+  width: 350px;
+}
+
 .lightbox-display img {
   max-width: 650px;
   height: fit-content;
   max-height: 600px;
 }
-
-/* .lightbox-close {
-  background: #fff;
-  position: relative;
-  height: 40px;
-  width: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  right: 40px;
-} */
 
 
 /* Text Format */
@@ -236,9 +256,10 @@
 ul, li, h1, h2, h3, h4, a, p {
   padding: 0;
   margin: 0;
+  color: #222;
 }
 
-p, h2, h4, li {
+p, h2, h4, li, .button, input {
   font-family: "Dosis", sans-serif;
   font-style: normal;
   font-optical-sizing: auto;
@@ -257,8 +278,7 @@ h1.ital, h3.ital {
 p {
   font-size: 18px;
   padding-bottom: 10px;
-  font-weight: 400;
-  color: #222;
+  font-weight: 40px
 }
 
 h1 {
@@ -283,8 +303,14 @@ h4 {
   font-weight: 500;
 }
 
-.home-container h1 {
+.home-container .left-container h1 {
   color: #fff;
+}
+
+.home-container .right-container h1 {
+  font-size: 50px;
+  line-height: 50px;
+  padding: 0;
 }
 
 .list-container ul {
@@ -312,6 +338,15 @@ p:last-child, li:last-child {
 span.small {
   font-size: 75%;
 }
+
+input {
+  font-size: 18px;
+}
+
+.lightbox-display.contact h2 {
+  padding: 20px 0 0;
+}
+
 
 /* Mobile */
 
